# crabbot

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_PLAN.md  README.md  auth  deny.toml  flake.nix  rust-toolchain.toml  tui.md
.github/workflows/: cargo-deny.yml  codespell.yml  contract-ci.yml  rust-ci.yml
apps/mobile/: README.md
crates/codex_app_server/: Cargo.toml
crates/codex_app_server/src/: lib.rs
crates/crypto/: Cargo.toml
crates/observability/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/adr/: README.md
docs/milestones/: M0-foundation.md  M1-contract-freeze.md  M2-api-core.md  M3-storage-reliability.md  M4-codex-runtime.md  M5-linux-cli.md  M6-tui-parity-pass.md  M7-rn-integration.md  M8-cutover-cleanup.md  README.md
docs/protocol/: websocket-events.md
schemas/: openapi.yaml
services/api/: Cargo.toml
services/api/src/: lib.rs  main.rs
services/cli/: Cargo.toml
services/cli/src/: daemon_commands.rs  main.rs  test_helpers.rs
services/cli/src/tui/: app_event.rs  app_server_bridge.rs  chatwidget.rs  fuzzy_match.rs  key_hint.rs  live_ui.rs  mod.rs  slash_commands.rs  style.rs  terminal_palette.rs
services/cli/src/tui/bottom_pane/: slash_commands.rs
services/cli/tests/golden/: attach_tui_output.txt
services/daemon/: Cargo.toml
services/daemon/src/: main.rs
tui/: Cargo.toml  frames
tui/src/: app.rs  app_event.rs  bottom_pane_stub.rs  chatwidget.rs  cli.rs  core_compat.rs  exec_cell_stub.rs  history_cell.rs  history_cell_stub.rs  insert_history.rs  lib.rs  main.rs  resume_picker.rs  skills_helpers_stub.rs  status_indicator_widget_stub.rs  status_stub.rs  theme_picker.rs  tui.rs
tui/src/bottom_pane/: approval_overlay.rs  chat_composer.rs  command_popup.rs  mod.rs  pending_thread_approvals.rs
tui/src/chatwidget/: realtime.rs  skills.rs  tests.rs
tui/src/exec_cell/: model.rs
tui/src/notifications/: mod.rs
tui/src/tui/: event_stream.rs  frame_requester.rs  live_ui.rs  mod.rs
tui/src/tui/bottom_pane/: mod.rs  slash_commands.rs
