[workspace]
members = [
  "tui",
  "services/api",
  "services/daemon",
  "services/cli",
  "crates/protocol",
  "crates/codex_app_server",
  "crates/crypto",
  "crates/storage",
  "crates/observability",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tracing = "0.1"
thiserror = "2"
url = "2"
crossterm = "0.28.1"

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
