[package]
name = "crabbot_api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
crabbot_protocol = { path = "../../crates/protocol" }
crabbot_storage = { path = "../../crates/storage" }
futures-util = "0.3"
jsonwebtoken = "9"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
