[package]
name = "crabbot_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
crabbot_protocol = { path = "../../crates/protocol" }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
