[package]
name = "crabbot_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
crabbot_protocol = { path = "../../crates/protocol" }
crabbot_tui = { path = "../../tui" }
crossterm = { workspace = true, features = ["bracketed-paste", "event-stream"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
qrcode = "0.14"
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
supports-color = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync"] }
toml = "0.8"
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
