[package]
name = "crabbot_daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
crabbot_codex_app_server = { path = "../../crates/codex_app_server" }
crabbot_protocol = { path = "../../crates/protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
