[package]
name = "crabbot_daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
crabbot_codex_app_server = { path = "../../crates/codex_app_server" }
crabbot_protocol = { path = "../../crates/protocol" }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.28"
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
